# personal-finance-llm

./: README.md  git.ignore  pyproject.toml
Backend/: main.py
Frontend/: app.js  index.html
